Replace `Collections.emptyList()` with `List.of()` for consistency and improved readability in return statements