@@ -24,7 +24,7 @@ public abstract class AbstractClassifierInstance<T extends Classifier<T>>
   @Override
   public @Nonnull List<AnnotationInstance> getAnnotations() {
     if (annotations == null) {
-      return Collections.emptyList();
+      return List.of();
     }
     return Collections.unmodifiableList(annotations);
   }
@@ -36,7 +36,7 @@ public abstract class AbstractClassifierInstance<T extends Classifier<T>>
   @Override
   public @Nonnull List<AnnotationInstance> getAnnotations(@Nonnull Annotation annotation) {
     if (annotations == null) {
-      return Collections.emptyList();
+      return List.of();
     }
     return annotations.stream()
         .filter(a -> a.getAnnotationDefinition() == annotation)
