@@ -95,7 +95,7 @@ public abstract class DynamicClassifierInstance<T extends Classifier<T>>
     if (containmentValues != null && containmentValues.containsKey(containment.getKey())) {
       return containmentValues.get(containment.getKey());
     } else {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
@@ -196,7 +196,7 @@ public abstract class DynamicClassifierInstance<T extends Classifier<T>>
     if (referenceValues != null && referenceValues.containsKey(reference.getKey())) {
       return referenceValues.get(reference.getKey());
     } else {
-      return Collections.emptyList();
+      return List.of();
     }
   }
 
